--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-intersection-observer": "^8.32.5",
     "react-masonry-css": "^1.0.16",
     "react-responsive": "^9.0.0-beta.5",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
